--- a/build.yaml
+++ b/build.yaml
@@ -14,7 +14,7 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: left_real nice_view_adapter nice_view
+    shield: lily58_right nice_view_adapter nice_view
     snippet: studio-rpc-usb-uart
   - board: nice_nano_v2
-    shield: left_fake nice_view_adapter nice_view
+    shield: lily58_left nice_view_adapter nice_view
